# CougNotes

./: Cargo.toml  README.md
src/: api.rs  class.rs  lib.rs  main.rs  post.rs  student.rs
src/client/: api.js  createaroom.css  createaroom.html  createaroom.js  home.css  home.html  index.css  index.html  index.js  joinroom.css  joinroom.html  profile.css  profile.html  profile.js  room.css  room.html  style.css  test.html
src/server/: api.rs  apiReadme.txt  class.rs  lib.rs  main.rs  post.rs  sql.rs  student.rs
src/server/sql/: .db.txt.swp  db.txt  tables.sql
