[package]
name = "CougNotes"
version = "0.1.0"
edition = "2021"

[lib]
name = "cougNotes"
path = "src/server/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = [ "attributes" ] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e382bc5" }
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql" ] }
static_init = "1.0.2"