[package]
name = "CougNotes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = [ "attributes" ] }
rand = "0.8.5"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e382bc5", features = [ "json" ] }
serde = { version = "1.0.117", features = [ "derive" ]}
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql" ] }